# data-validation

./: README.md
core/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  ValidationSchema.g4
core/antlr-cmake/: ExternalAntlr4Cpp.cmake
core/gtest-cmake/: CMakeLists.txt
core/include/: Context.h  CustomErrorListener.h  Error.h  Listener.h  Nodes.h  SyntaxError.h  ValidationError.h  Validator.h
core/src/: CMakeLists.txt  Context.cpp  CustomErrorListener.cpp  Error.cpp  Listener.cpp  Nodes.cpp  SyntaxError.cpp  ValidationError.cpp  Validator.cpp  main.cpp
core/tests/: CMakeLists.txt  semanticTests.cpp  test.cpp  validationTests.cpp
core/tests/resources/semantic/: globalDirectives.csvs  globalDirectives2.csvs  ignoreColumnNameCases.csvs  indexColumnDefinition.csvs  noTotalColumns.csvs  notQuoted.csvs  permitEmpty.csvs  positiveInteger.csvs  realNumber.csvs
core/tests/resources/syntactic/: any.csvs  columnExpressionExamples.csvs  column_definitions.csvs  column_reference.csvs  date.csvs  empty.csvs  endsWith.csvs  explicitContext.csvs  identical.csvs  identifiers.csvs  if.csvs  in.csvs  is.csvs  length.csvs  lowerCase.csvs  multiline_comments.csvs  not.csvs  notEmpty.csvs  positiveInteger.csvs  range.csvs  regex.csvs  simpleExample1.csvs  single_line_comments.csvs  startsWith.csvs  switch.csvs  unique.csvs  upperCase.csvs  uri.csvs  uuid.csvs  validSchema1.csvs
core/tests/resources/validation/: realNumber.csvs  realNumbersIndexColumn.csvs
